--- a/index.html
+++ b/index.html
@@ -168,7 +168,11 @@
       <section class="category-section container mx-auto p-5">
         <div>
           <div>
-            <h5>Food Category</h5>
+            <h1
+              class="text-center dark:text-white lg:text-4xl text-3xl lg:leading-9 leading-7 text-gray-800 font-semibold mb-5"
+            >
+              Food Category
+            </h1>
           </div>
           <div
             id="meal-card-full"
